--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "country-state-city": "^3.1.4",
+    "debug": "^4.3.4",
     "next": "13.4.3",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-lottie": "^1.2.3",
+    "supports-color": "8.1.1",
     "tailwindcss": "3.3.2"
   }
 }
