--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "country-state-city": "^3.1.4",
@@ -19,7 +20,10 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-lottie": "^1.2.3",
+    "react-redux": "^8.0.7",
     "react-toastify": "^9.1.3",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "supports-color": "8.1.1",
     "tailwindcss": "3.3.2"
   }
